Einige hboxen entferntx
git-svn-id: https://svn.lug-jena.de/uni-skripte@2214 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -2196,7 +2196,7 @@ Wellengleichung im $\R^{n}$.
 
 Wir entwickeln nun eine Heuristik zum Finden der Lösung. Dazu führen wir eine
 Fouriertransformation der Gleichung sowie der Anfangsbedingungen bezüglich
-$x\in\R^{n}$ durch. Es ist $(\widehat{\diffp{u}{{x_{1}}}[2]})(\xi,t)=
+$x\in\R^{n}$ durch. Es ist $\left(\widehat{\diffp[2]{u}{{x_{1}}}}\right)(\xi,t)=
 (-i \xi_{1})^{2} \hat{u}(\xi,t)= 
 -\xi_{1}^{2}\hat{u}(\xi,t)$ und $(\widehat{\Delta u})(\xi,t)= -\abs{\xi}^{2}
 \hat{u}(\xi,t)$.
@@ -2295,19 +2295,24 @@ S(\R^{n})$ und weiter $u(\xi,t)\in S(\R^{n})$.
 Für den eindimensionalen Fall ergibt sich nach \textsc{d'Alembert}: $u(x,t)=
 \nicefrac{1}{2}(f(x+t)+f(x-t))+ \nicefrac{1}{2} \int_{x-t}^{x+t} g(y)\,dy$.
 Das $u(x,t)$ aus dem \autoref{satz:411-neu} erfüllt diese Gleichung und es
-gilt: $u(x,t)= (2\pi)^{-\nicefrac{1}{2}} \int_{\R}
-\hat{f}(\xi)\cos(\abs{\xi}t) e^{i\xi}\,d\xi+ (2\pi)^{-\nicefrac{1}{2}}
-\int_{\R} \hat{g}(\xi) \frac{\sin(\abs{\xi}t)}{\abs{\xi}} e^{ix\xi}\,d\xi= (2\pi)^{-\nicefrac{1}{2}} \int_{\R}
-\hat{f}(\xi)\cos(\xi t) e^{i\xi}\,d\xi+ (2\pi)^{-\nicefrac{1}{2}}
-\int_{\R} \hat{g}(\xi) \frac{\sin(\xi t)}{\xi} e^{ix\xi}\,d\xi= (2\pi)^{-\nicefrac{1}{2}} \int_{\R}
-\hat{f}(\xi)\frac{e^{i\xi t} + e^{-i\xi t}}{2} e^{i\xi}\,d\xi+
-(2\pi)^{-\nicefrac{1}{2}} \int_{\R} \hat{g}(\xi)\frac{e^{i\xi t}- e^{-i\xi
-t}}{\xi2i} e^{ix\xi}\,d\xi= \frac{1}{2} (2\pi)^{-\nicefrac{1}{2}}
-\int_{-\infty}^{\infty} \hat{f}(\xi)(e^{i\xi(x+t)}+ e^{i\xi(x-t)})\,d\xi+
-\frac{1}{2} (2\pi)^{-\nicefrac{1}{2}} \int_{-\infty}^{\infty}
-\frac{\hat{g}(\xi)}{i\xi} (e^{i\xi(x+t)}- e^{-i\xi(x-t)})\,d\xi= \frac{1}{2}
-(\check{\hat{f}}(x+t)+ f(x-t))+ \frac{1}{2}
-(\underbrace{G(x+t)-G(x-t)}_{\int_{x-t}^{x+t} g(y)\,dy})$. Dabei ist $G$ die
+gilt:
+\begin{align*}
+  u(x,t) &= (2\pi)^{-\nicefrac{1}{2}} \int_{\R}\hat{f}(\xi)\cos(\abs{\xi}t)
+     e^{i\xi}\,d\xi+ (2\pi)^{-\nicefrac{1}{2}} \int_{\R} \hat{g}(\xi)
+     \frac{\sin(\abs{\xi}t)}{\abs{\xi}} e^{ix\xi}\,d\xi\\
+  &= (2\pi)^{-\nicefrac{1}{2}} \int_{\R}\hat{f}(\xi)\cos(\xi t)
+     e^{i\xi}\,d\xi+ (2\pi)^{-\nicefrac{1}{2}}\int_{\R} \hat{g}(\xi)
+     \frac{\sin(\xi t)}{\xi} e^{ix\xi}\,d\xi\\
+  &= (2\pi)^{-\nicefrac{1}{2}} \int_{\R}\hat{f}(\xi)\frac{e^{i\xi t} +
+     e^{-i\xi t}}{2} e^{i\xi}\,d\xi+(2\pi)^{-\nicefrac{1}{2}} \int_{\R}
+     \hat{g}(\xi)\frac{e^{i\xi t}- e^{-i\xi t}}{\xi2i} e^{ix\xi}\,d\xi\\
+  &= \frac{1}{2} (2\pi)^{-\nicefrac{1}{2}}\int_{-\infty}^{\infty}
+     \hat{f}(\xi)(e^{i\xi(x+t)}+ e^{i\xi(x-t)})\,d\xi\\
+  &\qquad+\frac{1}{2}
+     (2\pi)^{-\nicefrac{1}{2}} \int_{-\infty}^{\infty}\frac{\hat{g}(\xi)}{i\xi} (e^{i\xi(x+t)}- e^{-i\xi(x-t)})\,d\xi\\
+  &= \frac{1}{2}(\check{\hat{f}}(x+t)+ f(x-t))+ \frac{1}{2}(\underbrace{G(x+t)-G(x-t)}_{\int_{x-t}^{x+t} g(y)\,dy})
+\end{align*}
+Dabei ist $G$ die
 Stammfunktion von $g$ und es ist, $\hat{G}(\xi)i\xi= \hat{g}(\xi)$.
 
 Wir machen die Beobachtung, dass $\frac{f(x+t)+f(x-t)}{2}$ ein Mittel der
@@ -2367,7 +2372,7 @@ Oberflächenelement auf $\SSS$.
 %satz 4.1.3
 \begin{satz}
   Für $n=3$ lässt sich die Lösung für die Wellengleichung $\Delta
-  u=\diffp{f}{t}[2], u(x,0)=f(x), \diffp{u}{t}(x,0)=g(x)$ für $f,g\in
+  u=\diffp{f}{t}[2], u(x,0)=f(x)$ und $\diffp{u}{t}(x,0)=g(x)$ für $f,g\in
   S(\R^{3})$ darstellen als:
   \begin{gather*}
     u(x,t)= \diffp{}{t}(tM_{t}f)(x)+ tM_{t}g(x)
@@ -2604,7 +2609,7 @@ Für $f\in S(\R^{3})$ gilt dann, $\FR(f)\in S(\R\times\SSS^{2})$.
 
 \paragraph{Relation der \textsc{Radon}"~Transformation zur
   Fouriertransformation}
-Sei $f\in S(\R^{3})$.
+Sei $f\in S(\R^{3})$. Dann haben wir:
 \begin{enumerate}
  \item $\FR(f)\in S(\R)$ für festes $\gamma$ als Funktion von $t$
  \item Es gilt für festes $\gamma$:
@@ -2632,7 +2637,6 @@ Fouriertransformation von $\FR$. Es ist $\FR(f)=\FR(f)\Rightarrow f=g$. Denn
 $\hat{f}(s\gamma)= \FR(f)(s,\gamma)= \hat{\FR}(g)(s,\gamma)= \hat{g}(s\gamma)$
 für alle $s\in\R$ und $\gamma\in\SSS^{2}$. Somit $\hat{f}=\hat{g}\Rightarrow
 f=g$.
-
 Zur Rekonstruktion benötigen wir die duale \textsc{Radon}"~Transformation.
 \begin{defini}[Duale \textsc{Radon}"~Transformation]
   Sei $F\colon\R\times\SSS^{2}\rightarrow\C$. Dann ist die
@@ -3696,9 +3700,9 @@ d.\,h. $f_{y_{1}}\neq f_{y_{2}}$. Weiterihnh ist $\Phi$ surjektiv und ein
 Homöomorphismus. Also gilt:
 
 %satz 3.7.4
-\begin{satz}[Pontrjagin"=Dualität]
+\begin{satz}[\textsc{Pontrjagin}"=Dualität]
   Sei $G$ eine lokalkompakte abelsche Gruppe. Dann ist $\hat{\hat{G}}\cong G$,
-  wobei $\Phi\colon G\rightarrow\hat{\hat{G}}, (\Phi(y))(X)\coloneq X(y)$ ein
+  wobei $\Phi\colon G\rightarrow\hat{\hat{G}}$ mit $(\Phi(y))(X)\coloneq X(y)$ ein
   Gruppenisomorphismus und Homöomorphismus ist.
 \end{satz}
 
@@ -4034,10 +4038,14 @@ Der Beweis erfolgt durch Variablensubstitution.
     (\sum_{k\in\Z} \abs{\hat{\Phi} (\xi+2k\pi)}^{2})^{-\nicefrac{1}{2}}$.
     Dabei ist $\Phi_{1}\in\overline{\spn}\{\Phi(x-k)\colon k\in\Z\}$ wegen
     der Bemerkung 2. Weiterhin ist $\{\Phi_{1}(x-k)\colon k\in\Z\}$ ein
-    Orthonormalsystem mit \autoref{satz:423}. Denn $\sum_{k\in\Z}
-    \abs{\hat{\Phi}_{1} (\xi+2k\pi)}^{2}= \sum_{k\in\Z} \abs{\phi(\xi)}^{2}
-    \abs{\hat{\Phi}(\xi+2k\pi)}^{2}= \abs{\phi(\xi)}^{2} \sum_{k\in\Z}
-    \abs{\hat{\Phi} (\xi+2k\pi)}^{2}= \frac{1}{2\pi}$. Es existieren $A,B>0$
+    Orthonormalsystem mit \autoref{satz:423}. Denn
+    \begin{align*}
+      \sum_{k\in\Z} \abs{\hat{\Phi}_{1} (\xi+2k\pi)}^{2} &= \sum_{k\in\Z}
+	 \abs{\phi(\xi)}^{2} \abs{\hat{\Phi}(\xi+2k\pi)}^{2}\\
+      &= \abs{\phi(\xi)}^{2} \sum_{k\in\Z} \abs{\hat{\Phi} (\xi+2k\pi)}^{2}=
+	 \frac{1}{2\pi}
+    \end{align*}
+    Es existieren $A,B>0$
     mit $A\leq\abs{\phi(\xi)}\leq B$ für fast alle $\xi$ wegen
     \autoref{satz:422}. Die Bemerkung 2 oben besagt,
     $\overline{\spn}\{\Phi(x-k)\}= \{g\colon \hat{g}(\xi)=
@@ -4164,17 +4172,25 @@ V_{0}\Rightarrow \Phi(\nicefrac{x}{2})=\sum_{n\in\Z} a_{n} \Phi(x-n)$.
     orthogonale Projektion auf $V_{j}\Rightarrow P_{f}f=0$ für alle
     $j\in\Z\Rightarrow \norm{P_{j}g}_{2}<\epsilon$. Wir benutzen nun die
     Folgerung aus \autoref{satz:421}:
-    $\norm{P_{j}g}^{2}\geq B^{-1}\sum_{k\in\Z} \abs{\langle P_{j}g,
-    \Phi_{jk}\rangle}^{2}= B^{-1} \sum_{k\in\Z} \abs{\langle g,
-    \Phi_{jk}\rangle}^{2}= B^{-1} \sum_{k\in\Z} \abs{\langle\hat{g},
-    \hat{\Phi}_{jk}\rangle}^{2}= B^{-1} \sum_{k\in\Z}
-    \abs{\int_{-\infty}^{\infty} \hat{g}(\xi) 2^{-\nicefrac{j}{2}}
-      e^{ik2^{-j}\xi} \hat{\Phi}(2^{-j}\xi)\,d\xi}^{2}= B^{-1} \sum_{k\in\Z}
-    \abs{\int_{-R}^{R} \hat{g}(\xi) 2^{-\nicefrac{j}{2}}
-      e^{-ik2^{-j}\xi} \hat{\Phi}(2^{-j}\xi)\,d\xi}^{2}$. Nun sei $j$ so groß,
-    dass $2^{j}\pi>R$, dann ist die obige Formel gleich $B^{-1} \sum_{k\in\Z}
-    \abs{\int_{-2^{j}\pi}^{2^{j}\pi} \hat{g}(\xi)2^{-\nicefrac{j}{2}}
-    \hat{\Phi}(2^{-j}\xi) e^{ik2^{-j}\xi}\,d\xi}^{2}$. Das ist der $(-k)$-te
+    \begin{align*}
+      \norm{P_{j}g}^{2} &\geq B^{-1}\sum_{k\in\Z} \abs{\langle P_{j}g,
+	 \Phi_{jk}\rangle}^{2}= B^{-1} \sum_{k\in\Z} \abs{\langle g,
+	 \Phi_{jk}\rangle}^{2}\\
+      &= B^{-1} \sum_{k\in\Z} \abs{\langle\hat{g},
+	 \hat{\Phi}_{jk}\rangle}^{2}= B^{-1} \sum_{k\in\Z}
+	 \abs{\int_{-\infty}^{\infty} \hat{g}(\xi) 2^{-\nicefrac{j}{2}}
+	   e^{ik2^{-j}\xi} \hat{\Phi}(2^{-j}\xi)\,d\xi}^{2}\\
+      &= B^{-1} \sum_{k\in\Z} \abs{\int_{-R}^{R} \hat{g}(\xi) 2^{-\nicefrac{j}{2}}
+      e^{-ik2^{-j}\xi} \hat{\Phi}(2^{-j}\xi)\,d\xi}^{2}
+    \end{align*}
+    Nun sei $j$ so groß,
+    dass $2^{j}\pi>R$, dann ist die obige Formel gleich
+    \begin{gather*}
+      B^{-1} \sum_{k\in\Z} \abs{\int_{-2^{j}\pi}^{2^{j}\pi}
+	 \hat{g}(\xi)2^{-\nicefrac{j}{2}} \hat{\Phi}(2^{-j}\xi)
+	 e^{ik2^{-j}\xi}\,d\xi}^{2}
+    \end{gather*}
+    Das ist der $(-k)$-te
     Fourierkoeffizient der Funktion $\sqrt{2\pi} \hat{g}(\xi)\hat{\Phi}(2^{-j}\xi)$ auf
     $[-2^{j}\pi, 2^{j}\pi]$ bezüglich des Orthonormalsystems
     $\{2^{-\nicefrac{j}{2}} e^{ik2^{-j}\xi} \frac{1}{\sqrt{2\pi}}\colon
@@ -4209,7 +4225,7 @@ W_{j}}$. Wir wissen:
 \end{enumerate}
 Somit erhalten wir
 $\hat{f}(\xi)=m_{f}(\nicefrac{\xi}{2})\hat{\Phi}(\nicefrac{\xi}{2})$ mit
-$m_{f}$ $2\pi$"~periodisch und
+$m_{f}$ als einer $2\pi$"~periodischen Funktion und
 $\norm{f}_{2}=\sqrt{2}\norm{m_{f}|L_{2}[0,2\pi)}$.
 
 %satz 4.4.1
@@ -4221,35 +4237,44 @@ $\norm{f}_{2}=\sqrt{2}\norm{m_{f}|L_{2}[0,2\pi)}$.
     \norm{f}_{2} = \norm{v|L_{2}[0,2\pi)}
   \end{gather*}
   \begin{proof}
-    $f\in W_{0}\Leftrightarrow f\in V_{1}\wedge f\perp V_{0}$. Zuerst nutzen
-    wir die letzte Tatsache aus: $f\perp V_{0}\Leftrightarrow\langle f,
-    \Phi(x-k)\rangle=0= \langle\hat{f}, \widehat{\Phi(x-k)}\rangle=
-    \int_{-\infty}^{\infty} \hat{f}(\xi) e^{i\xi k}
-    \overline{\hat{\Phi}(\xi)}\,d\xi= \int_{0}^{2\pi} e^{i\xi k} \underbrace{\sum_{l\in\Z}
-    \hat{f}(\xi+2l\pi) \overline{\hat{\Phi}(\xi+2l\pi)}}_{=F(\xi)}\,d\xi$ für
+    Es ist $f\in W_{0}\Leftrightarrow f\in V_{1}\wedge f\perp V_{0}$. Zuerst nutzen
+    wir die letzte Tatsache aus:
+    \begin{align*}
+      f\perp V_{0} &\Leftrightarrow\langle f, \Phi(x-k)\rangle=0=
+	 \langle\hat{f}, \widehat{\Phi(x-k)}\rangle\\
+      &= \int_{-\infty}^{\infty} \hat{f}(\xi) e^{i\xi k}
+	 \overline{\hat{\Phi}(\xi)}\,d\xi\\
+      &= \int_{0}^{2\pi} e^{i\xi k} \underbrace{\sum_{l\in\Z}
+    \hat{f}(\xi+2l\pi) \overline{\hat{\Phi}(\xi+2l\pi)}}_{=F(\xi)}\,d\xi
+    \end{align*}
+    für
     $k\in\Z$. Somit erhalten wir $\langle f,\Phi(x-k)\rangle=
     2\pi\hat{F}(-k)\Rightarrow \hat{F}(k)=0$ für alle $k$ und es folgt,
-    $F(\xi)=0$ für fast alle $\xi$. Weiter $\sum_{l\in\Z}
-    \hat{f}(\xi+2l\pi) \overline{\hat{\Phi}(\xi+2l\pi)= \sum_{l\in\Z}
-    m_{f}(\nicefrac{\xi}{2}+l\pi)
-    \hat{\Phi}(\nicefrac{\xi}{2}+l\pi)\overline{m_{\Phi}(\nicefrac{\xi}{2}+
-    l\pi)} \overline{\hat{\Phi}(\nicefrac{\xi}{2}+l\pi)}=
-    m_{f}(\nicefrac{\xi}{2})\overline{m_{\Phi}(\nicefrac{\xi}{2})}
-    \underbrace{\sum_{l\in\Z}\abs{\hat{\Phi}(\nicefrac{\xi}{2}+2l\pi)}^{2}}_{=\frac{1}{2\pi}}+
-    m_{f}(\nicefrac{\xi}{2}+\pi) \overline{m_{\Phi}(\nicefrac{\xi}{2}+\pi)}
-    \underbrace{\sum_{l\in\Z}
-    \abs{\hat{\Phi}(\nicefrac{\xi}{2}+\pi+2l\pi)}^{2}}_{=\frac{1}{2\pi}}=
-    \frac{1}{2\pi} (m_{f}(\nicefrac{\xi}{2}) \overline{m_{\Phi}
-    (\nicefrac{\xi}{2})} + m_{f}(\nicefrac{\xi}{2}+\pi)
-    \overline{m_{\Phi}(\nicefrac{\xi}{2} +\pi)})\Rightarrow
-    (m_{f}(\nicefrac{\xi}{2}), m_{f}(\nicefrac{\xi}{2}+\pi))\perp
-    (\overline{m_{\Phi}(\nicefrac{\xi}{2})},
-    \overline{m_{\Phi}(\nicefrac{\xi}{2}+ \pi)})\Rightarrow
-    m_{f}(\nicefrac{\xi}{2})=
-    \alpha(\nicefrac{\xi}{2})\overline{m_{\Phi}(\nicefrac{\xi}{2} +\pi)},
-    m_{f}(\nicefrac{\xi}{2}+\pi)= -\alpha(\nicefrac{\xi}{2})
-    \overline{m_{\Phi}(\nicefrac{\xi}{2})}} \Rightarrow m_{f}(\eta)=
-    \alpha(\eta) \overline{m_{\Phi}(\eta+\pi)}$. Für $\eta=\eta+\pi$ folgt
+    $F(\xi)=0$ für fast alle $\xi$. Weiter haben wir:
+    \begin{align*}
+      \sum_{l\in\Z} \hat{f}(\xi+2l\pi) \overline{\hat{\Phi}(\xi+2l\pi)} &=
+	 \sum_{l\in\Z} m_{f}(\nicefrac{\xi}{2}+l\pi)
+	 \hat{\Phi}(\nicefrac{\xi}{2}+l\pi)\overline{m_{\Phi}(\nicefrac{\xi}{2}+
+	 l\pi)} \overline{\hat{\Phi}(\nicefrac{\xi}{2}+l\pi)}\\
+      &= m_{f}(\nicefrac{\xi}{2})\overline{m_{\Phi}(\nicefrac{\xi}{2})}
+	 \underbrace{\sum_{l\in\Z}\abs{\hat{\Phi}(\nicefrac{\xi}{2}+2l\pi)}^{2}}_{=\frac{1}{2\pi}}\\
+      &\qquad+ m_{f}(\nicefrac{\xi}{2}+\pi)
+	 \overline{m_{\Phi}(\nicefrac{\xi}{2}+\pi)} \underbrace{\sum_{l\in\Z}
+	 \abs{\hat{\Phi}(\nicefrac{\xi}{2}+\pi+2l\pi)}^{2}}_{=\frac{1}{2\pi}}\\
+      &= \frac{1}{2\pi} (m_{f}(\nicefrac{\xi}{2}) \overline{m_{\Phi}
+	 (\nicefrac{\xi}{2})} + m_{f}(\nicefrac{\xi}{2}+\pi)
+	 \overline{m_{\Phi}(\nicefrac{\xi}{2} +\pi)})\\
+      &\Rightarrow (m_{f}(\nicefrac{\xi}{2}),
+	 m_{f}(\nicefrac{\xi}{2}+\pi))\perp
+	 (\overline{m_{\Phi}(\nicefrac{\xi}{2})},
+	 \overline{m_{\Phi}(\nicefrac{\xi}{2}+ \pi)})\\
+      &\Rightarrow m_{f}(\nicefrac{\xi}{2})=
+	 \alpha(\nicefrac{\xi}{2})\overline{m_{\Phi}(\nicefrac{\xi}{2} +\pi)},
+	 m_{f}(\nicefrac{\xi}{2}+\pi)\\
+      &= -\alpha(\nicefrac{\xi}{2}) \overline{m_{\Phi}(\nicefrac{\xi}{2})}
+	 \Rightarrow m_{f}(\eta)= \alpha(\eta) \overline{m_{\Phi}(\eta+\pi)}
+    \end{align*}
+    Für $\eta=\eta+\pi$ folgt
     $m_{f}(\eta+\pi)= \alpha(\eta+\pi)\overline{m_{\Phi}(\eta)}$ und
     $m_{f}(\eta)= -\alpha(\eta+\pi) \overline{m_{\Phi}(\eta+\pi)}\Rightarrow
     \alpha(\eta)= -\alpha(\eta+\pi)$ und $m_{f}(\eta)= \alpha(\eta)
@@ -4400,13 +4425,16 @@ $B$"~Splines kann man die anderen "`herstellen"'. Für die $B$"~Splines gilt:
 \end{gather*}
 
 \begin{bsp}
-  $N_{1}(x)= N_{0}*N_{0}(x)= \int_{-\infty}^{\infty} 1_{[0,1]}(y)
-  1_{[0,1]}(x-y)\,dy= \int_{0}^{1} 1_{[0,1]} (x-y)\,dy=
+  \begin{align*}
+    N_{1}(x) &= N_{0}*N_{0}(x)= \int_{-\infty}^{\infty} 1_{[0,1]}(y)
+       1_{[0,1]}(x-y)\,dy= \int_{0}^{1} 1_{[0,1]} (x-y)\,dy\\
+    &=
   \begin{cases}
     0 & x>2, x<0\\
     x & 0\leq x\leq1\\
     1-x & 1\leq x\leq2
-  \end{cases}$
+  \end{cases}
+  \end{align*}
 
   Schauen wir uns noch $N_{2}$ an:
   $N_{2}(x)= \int_{0}^{1} N_{1}(x-y)\,dy=
@@ -4484,10 +4512,14 @@ $\sum_{k\in\Z} b_{k} k^{n}=0$.
 
 \paragraph{Interskalenbeziehungen}
 
-Wir haben $\langle f,\Phi_{jn}\rangle= \sqrt{2} \sum_{k\in\Z}
-\overline{a_{k-2n}} \times \langle f,\Phi_{j+1,k}\rangle$ und $\langle
-f,\psi_{jn}\rangle =\sqrt{2} \sum_{k\in\Z} \overline{b_{k-2n}} \langle
-f,\Phi_{j+1,k}\rangle$. Beide Formeln sind umgeschriebene
+Wir haben
+\begin{align*}
+  \langle f,\Phi_{jn}\rangle &= \sqrt{2} \sum_{k\in\Z}\overline{a_{k-2n}}
+     \times \langle f,\Phi_{j+1,k}\rangle\\
+  \langle f,\psi_{jn}\rangle &=\sqrt{2} \sum_{k\in\Z} \overline{b_{k-2n}}
+     \langle f,\Phi_{j+1,k}\rangle
+\end{align*}
+Beide Formeln sind umgeschriebene
 Skalierungsgleichungen. Es gilt $\Phi(x-n)= 2\sum_{k\in\Z} a_{k}
 \Phi(2x-(2n+k))= 2\sum_{k\in\Z} a_{k-2n} \Phi(2x-k)$. Letzteres erhält man
 durch Indexverschiebung. Weiter will man ein $j$ dazu haben: $\Phi(2^{j}x-n)=
@@ -4533,10 +4565,10 @@ $F_{4}=
   1 &-1 & 1 & -1\\
   1 &-i & -1& i
 \end{pmatrix}, y=F_{n}x$ liefert die Fouriertransformation von $x$. Im naiven
-Ansatz benötigt man einen Aufwand von $\mathcal{O}(n^{2})$.
+Ansatz benötigt man einen Aufwand von $\CO(n^{2})$.
 
 Die \emph{schnelle} Fouriertransformation (FFT) hat eine Komplexität von
-$\mathcal{O}(n\log n)$. Damit das funktioniert, muss $n$ gerade (eigentlich
+$\CO(n\log n)$. Damit das funktioniert, muss $n$ gerade (eigentlich
 einer Zweierpotenz) sein. Setzen $n=2m$ und $y'=(y_{0}, y_{2}, y_{4},\dotsc,
 y_{n-2})\in\C^{m}, y''=(y_{1}, y_{3}, y_{5},\dotsc, y_{n-1})\in\C^{m}$. Es ist
 $y_{k}'= y_{2k}= \sum_{k=0}^{n-1} \omega^{h(2k)} x_{k}$. Diese Summe wird in
@@ -4548,12 +4580,12 @@ ist $y'=F_{m}x'$ mit $x_{k}'= x_{h}+x_{h+m}$.
 \todo{Beginn der Vorlesung vom 2007-07-18}
 %Vorlesung vom 2007-07-18
 
-\paragraph{Inverse Fouriertransformation}
-
-$F_{N}^{-1}=\frac{1}{n} F_{n}(\omega^{-1})= \frac{1}{n}
-(\omega^{-hk})_{h,k=0}^{n-1}$
-
-Wir bezeichnen die inverse schnelle Fouriertransformation mit IFFT.
+Die \highl[Fouriertransformation!inverse]{inverse Fouriertransformation} (IFFT) ist
+definiert als
+\begin{gather*}
+  F_{N}^{-1}=\frac{1}{n} F_{n}(\omega^{-1})=
+     \frac{1}{n}(\omega^{-hk})_{h,k=0}^{n-1}
+\end{gather*}
 
 \paragraph{Polynommultiplikation}
 
@@ -4563,19 +4595,19 @@ Wir bezeichnen die inverse schnelle Fouriertransformation mit IFFT.
   R(x) &= P(x)Q(x)= \sum_{k=0}^{r+s} c_{k} x^{k}\\
   c_{k} &= \sum_{i=0}^{k} a_{i} b_{k-i}
 \end{align*}
-Die Komplexität der obigen Operationen entspricht $O(n^{2})$, was zu langsam
+Die Komplexität der obigen Operationen entspricht $\CO(n^{2})$, was zu langsam
 ist. $P(x)$ ist gegeben durch $(r+1)$"~Werte $P(x_{0}),\dotsc,P(x_{r})$. Diese
 Darstellung nennt man Stützstellendarstellung. Zur Berechnung von
-$R(x_{0}),\dotsc,R(x_{n})$ aus $P(x_{0}),\dotsc,P(x_{n}),
-Q(x_{0}),\dotsc,Q(x_{n})$ braucht man $O(m)$ Zeit. Wir wählen die Stützstellen
+$R(x_{0}),\dotsc,R(x_{n})$ aus aus den Werten $P(x_{0}),\dotsc,P(x_{n})$ und 
+$Q(x_{0}),\dotsc,Q(x_{n})$ braucht man $\CO(m)$ Zeit. Wir wählen die Stützstellen
 komplex: $x_{k}=\omega^{k}$. Dabei ist $\omega$ eine primitive $n$-te
 Einheitswurzel mit $n>r+s$. Nun ist $y_{k}= P(x_{k})=P(\omega^{k})=\sum_{k=0}^{r}
 a_{k} \omega^{hk} = \sum_{k=0}^{n-1} a_{k} \omega^{hk}$ für $a_{k}=0$ für
 $k>r$. Wir erkennen die Fouriertransformation wieder. Es ist
 $y=(y_{0},y_{1},\dotsc, y_{n-1})=F_{n}(a), a=(a_{0}, a_{1},\dotsc, a_{n-1})$.
 
-Der Übergang von der Koeffizientendarstellung zur Stützstellendarstellung 
-braucht $O(n\log n)$ Zeit. Der folgende Algorithmus funktioniert:
+Der Übergang von der Koeffizienten- zur Stützstellendarstellung 
+braucht $\CO(n\log n)$ Zeit. Der folgende Algorithmus funktioniert:
 \begin{enumerate}
  \item Wähle $n>r+s$
  \item Füllen den Vektor $a=(a_{0},\dotsc, a_{r},0,\dotsc,0)$ mit Nullen auf.
@@ -4616,7 +4648,7 @@ braucht $O(n\log n)$ Zeit. Der folgende Algorithmus funktioniert:
 Die Zahl 5637 wird beispielsweise als $5x^{2}+6x^{2}+3x+7=P(x)$ geschrieben,
 d.\,h. man wandelt die Zahl in ein Polynom um. Mit diesem Polynom wird dann
 die oben beschriebene schnelle Fouriertransformation durchgeführt. Auf diese
-Weise erreicht man ebenfalls eine Komplexität von $O(n\log n)$.
+Weise erreicht man ebenfalls eine Komplexität von $\CO(n\log n)$.
 
 \paragraph{Polynominterpolation}
 
@@ -4693,9 +4725,9 @@ von $A$:
     \frac{1}{2\pi} \int_{0}^{2\pi} \Re e^{-t\cos\theta}\,d\theta=
     \frac{1}{2\pi} \int_{0}^{2\pi} \cos(t\cos\theta)\,d\theta$. Diese Funktion
     bezeichnet man als \highl{Besselfunktion}. Wir brauchen weiter
-    $\abs{1-\hat{\sigma}(\xi)}= O(\norm{\xi}_{2})$ für
+    $\abs{1-\hat{\sigma}(\xi)}= \CO(\norm{\xi}_{2})$ für
     $\norm{\xi}_{2}\rightarrow0$ und
-    $\abs{\hat{\sigma}(\xi)}=O(\norm{\xi}_{2}^{-\nicefrac{1}{2}})$ für
+    $\abs{\hat{\sigma}(\xi)}=\CO(\norm{\xi}_{2}^{-\nicefrac{1}{2}})$ für
     $\norm{\xi}_{2}\rightarrow\infty$.
 
     Die Idee für den weiteren Beweis ist: Führe zu gegebenem $t$ ein Maß auf
@@ -4728,18 +4760,19 @@ von $A$:
     $t\leq\eta$ folgt, dass der einheitskreis in $R_{1}$ enthalten ist. Somit
     können wir das Integral nach unten abschätzen: $M_{1}\geq \nicefrac{1}{2}
     \int_{B(0,1)} \abs{\hat{1}_{A}(\xi)}^{2}\,d\xi$. Jetzt behaupten wir, dass
-    $\abs{\hat{1}_{A}(\xi)-\epsilon}=O(\norm{\xi}_{2}\epsilon)$ für
+    $\abs{\hat{1}_{A}(\xi)-\epsilon}=\CO(\norm{\xi}_{2}\epsilon)$ für
     $\norm{\xi}_{2}\rightarrow0$. (Nachweis als Übung) Somit folgt
     $M_{1}\geq\Omega(\epsilon^{2})$.
 
-    Für $M_{3}$ haben wir $\abs{\hat{\sigma}(t\xi)}=O(\sqrt{\eta})$. Es ist
-    $\abs{M_{3}}= O(\sqrt{\eta}) \int_{R_{3}}
-    \abs{\hat{1}_{A}(\xi)}^{2}\,d\xi= O(\sqrt{\eta}) \int_{\R^{2}}
-    \abs{\hat{1}_{A}(\xi)}^{2}\,d\xi= O(\sqrt{\eta}) \int_{\R^{2}}
-    \abs{1_{A}(x)}^{2}\,dx= O(\sqrt{\eta}\epsilon)=
-    O(\sqrt{c}\epsilon^{2})\ll\epsilon^{2}$.
-
-    Zuletzt müssen wir noch $M_{2}$ abschätzen. Es ist $\abs{M_{2}}= O(1)
+    Für $M_{3}$ haben wir $\abs{\hat{\sigma}(t\xi)}=\CO(\sqrt{\eta})$. Es ist:
+    \begin{align*}
+      \abs{M_{3}} &= \CO(\sqrt{\eta}) \int_{R_{3}}
+	 \abs{\hat{1}_{A}(\xi)}^{2}\,d\xi= \CO(\sqrt{\eta}) \int_{\R^{2}}
+	 \abs{\hat{1}_{A}(\xi)}^{2}\,d\xi\\
+      &= \CO(\sqrt{\eta}) \int_{\R^{2}} \abs{1_{A}(x)}^{2}\,dx=
+	 \CO(\sqrt{\eta}\epsilon)= \CO(\sqrt{c}\epsilon^{2})\ll\epsilon^{2}
+    \end{align*}
+    Zuletzt müssen wir noch $M_{2}$ abschätzen. Es ist $\abs{M_{2}}= \CO(1)
     \int_{R_{2}(t)}\abs{\hat{1}_{A}(\xi)}^{2}\,d\xi$ für ein $t=t_{j}$ mit
     $j\leq j_{0}$. Wir wissen $\int_{\R^{2}}
     \abs{\hat{1}_{A}(\xi)}^{2}\,d\xi=\epsilon$. Finde nun genügend viele
@@ -4858,12 +4891,17 @@ Die Fortsetzung von $\delta_{l}$ auf $\Z$ wird als
 Insgesamt können wir folgern, dass $\sum_{p\equiv l}
 \frac{1}{p^{s}}\xrightarrow{s\searrow1} \infty$. Also gibt es unendlich viele
 Primzahlen $p$ mit $p\equiv l$.
-Zum Nachweis betrachten wir $\sum_{p\equiv l} \frac{1}{p^{s}}= \sum_{p}
-\frac{\delta_{l}(p)}{p^{s}} \sum_{p} \frac{1}{p^{s}} \frac{1}{\phi(q)}
-\sum_{\chi} \chi(p)\overline{\chi(l)}= \frac{1}{\phi(q)} \sum_{\chi}
-\overline{\chi(l)} \sum_{p} \frac{\chi(p)}{p^{s}}= \frac{1}{\phi(q)}
-\sum_{p\nmid q} \frac{1}{p^{s}} + \frac{1}{\phi(q)} \sum_{\chi\neq\chi_{0}}
-\overline{\chi(l)} \sum_{p} \frac{\chi(p)}{p^{s}}$. Die letzte Summe geht für
+Zum Nachweis betrachten wir
+\begin{align*}
+  \sum_{p\equiv l} \frac{1}{p^{s}} &= \sum_{p}\frac{\delta_{l}(p)}{p^{s}} =
+     \sum_{p} \frac{1}{p^{s}} \frac{1}{\phi(q)}\sum_{\chi}
+     \chi(p)\overline{\chi(l)}\\
+  &= \frac{1}{\phi(q)} \sum_{\chi}\overline{\chi(l)} \sum_{p}
+     \frac{\chi(p)}{p^{s}}\\
+  &= \frac{1}{\phi(q)}\sum_{p\nmid q} \frac{1}{p^{s}} + \frac{1}{\phi(q)}
+     \sum_{\chi\neq\chi_{0}}\overline{\chi(l)} \sum_{p} \frac{\chi(p)}{p^{s}}
+\end{align*}
+Die letzte Summe geht für
 $s\searrow1$ gegen $\infty$, falls $\sum_{p}\frac{\chi(p)}{p^{s}}$ beschränkt
 ist. Die erste Summe im Ausdruck kann man auch schreiben als
 $\frac{1}{\phi(q)} \sum_{p} \frac{1}{p^{s}}- \frac{1}{\phi(q)} \sum_{p \mid q}
