ALte Definition von todo auskommentiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@2218 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -132,7 +132,7 @@
 \newcommand*{\help}[1]{\textcolor{green}{help: #1}}
 
 % \todo ist das gleiche wie \help nur für offene Aufgaben
-\newcommand*{\todo}[1]{\textcolor{red}{todo: #1}}
+%\newcommand*{\todo}[1]{\textcolor{red}{todo: #1}}
 
 % Um wichtige Begriffe im Text überall gleich vorzuheben (gleiches
 % Markup), sollte dieser Befehl verwendet werden. Das Argument wird
