--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -343,7 +343,7 @@ funktioniert. Eine Lösung lieferten \textsc{Fourier} und \textsc{Dirichlet}.
   von Partialsummen)
 \end{enumerate}
 
-\textsc{Fourier}s Idee war $\int_{0}^{\pi} \phi(x) \sin kx\,dx= \sum_{j=1}^{\infty}
+\textsc{Fourier}s Idee war die Funktion durch eine Reihe darzustellen: $\int_{0}^{\pi} \phi(x) \sin kx\,dx= \sum_{j=1}^{\infty}
 b_{j} \int_{0}^{\pi} \sin jx \sin kx\,dx=\sum_{j=1}^{\infty} b_{j}
 \begin{cases}
   0 & j\neq k\\
@@ -378,7 +378,7 @@ Im $\R^{n}$ gibt es Gruppen, die natürlich darauf operieren.
  \item Dilatation
 \end{itemize}
 Interessant sind Funktionen, die sich bezüglich dieser Operationen gut
-verhalten.
+verhalten. Diese wollen wir im folgenden studieren.
 
 Für Fourierreihen muss man sich ein anderes Objekt besorgen, den \highl{Torus}
 $\T=\R/_{2\pi\Z}$.
@@ -472,7 +472,7 @@ $c_{j}$ die Fourierkoeffizienten. Die Frage ist, wann die Fourierreihe
 konvergiert.
 
 Sei $f$ ein trigonometrisches Polynom, d.\,h. wir haben eine endliche Summe:
-$f(x)=\sum_{j=-N}^{N} c_{j} e^{ijx}$. Wie rechnet man die $c_{j}$ aus? Wir
+$f(x)=\sum_{j=-N}^{N} c_{j} e^{ijx}$. Wie rechnet man die Koeffizienten $c_{j}$ aus? Wir
 integrieren gegen einen Charakter\todo{Warum wird das gemacht?}:
 \begin{align*}
  \int_{0}^{2\pi} f(x)e^{-ikx}\,dx &= \sum_{j=-N}^{N} c_{j} \int_{0}^{2\pi}
@@ -597,8 +597,9 @@ für $S_{N}f(x)$ zu finden:
      = \frac{1}{2\pi} \int_{0}^{2\pi} D_{N}(x-y) f(y)\,dy
 \end{align*}
 
-Dabei ist $D_{N}(x)=\sum_{j=-N}^{N} e^{ijx}$ der \highl{\textsc{Dirichlet}kern} und es
-folgt weiter:
+Dabei ist $D_{N}(x)=\sum_{j=-N}^{N} e^{ijx}$ der
+\highl{\textsc{Dirichlet}kern} und wir versuchen durch geschicktes Umstellen
+eine explizite Darstellung zu gewinnen:
 \begin{align*}
   D_{N}(x) &= \sum_{j=-N}^{N} e^{ijx} = e^{-iNx}\sum_{j=0}^{2N} e^{ijx}\\
   &= e^{-iNx} \frac{e^{i(2N+1)x}-1}{e^{ix}-1}
@@ -1171,9 +1172,12 @@ $A\leq\nicefrac{1}{4\pi} l^2$ gilt.
       \frac{1}{2\pi} \int_{0}^{2\pi} (y'(s))^{2}\,ds &=
 	 \sum_{-\infty}^{\infty} \abs{b_{n}}^{2} \abs{n}^{2}
     \end{align*}
-    Insgesamt haben wir somit $1= \frac{1}{2\pi} \int_{0}^{2\pi} 1\,ds=
+    Insgesamt haben wir somit
+    \begin{gather*}
+      1= \frac{1}{2\pi} \int_{0}^{2\pi} 1\,ds=
     \frac{1}{2\pi} \int_{0}^{2\pi} (x'(s))^{2}+(y'(s))^{2}\,ds=
-    \sum_{-\infty}^{\infty} \abs{n}^{2}(\abs{a_{n}}^{2}+ \abs{b_{n}}^{2})$.
+    \sum_{-\infty}^{\infty} \abs{n}^{2}(\abs{a_{n}}^{2}+ \abs{b_{n}}^{2})
+    \end{gather*}
     Also ist $\hat{}\colon L_{2}([0,2\pi))\rightarrow \ell_{2}$ ein Isometrie,
     d.\,h. das Skalarprodukt wird erhalten: $\langle f,g\rangle=
     \frac{1}{2\pi} \int_{0}^{2\pi} f(s)\overline{g(s)}\,ds=
@@ -1939,8 +1943,7 @@ L_{p}\leadsto f_{j}\xrightarrow{L_{p}} f$ mit $f_{j}\in
 C^{\infty}_{c}(\R^{n})$ und $\hat{f}_{j}\xrightarrow{?}\hat{f}$. Das gibt
 Probleme: Konvergenz in welchem Sinne, in welchem Funktionenraum liegt
 $\hat{f}$?
-
-Der zweite Ansatz sieht wie folgt aus: Interpolation mit Hilfe des
+Der zweite Ansatz ist eine Interpolation mit Hilfe des
 Riesz-Thorin-Theorems.
 
 Mit der Interpolation kann man die folgende Frage lösen: Man hat einen
@@ -2531,8 +2534,10 @@ Für gerades $n$ ist:
 \end{gather*}
 
 \section{Die \textsc{Radon}"~Transformation}
-Diese Transformation ist benannt nach \textsc{Johann Radon} und wird im
-englischen als X"~ray"~transform bezeichnet. Wir betrachten den
+Diese Transformation ist benannt nach \textsc{Johann Radon} und wurde von ihm
+im Jahr 1917 entdeckt. Im Englischen  bezeichnet man sie als
+"`X"~ray"~transform"'. Diese Transformation hat viele Anwendungen in der
+Mathematik und in anderen Fachgebieten, speziell in der Medizin. Wir betrachten den
 zweidimensionalen Fall ($n=2$).
 
 Mit $I_{0}$ wird die Intensität eines Strahls vor Eintritt in ein Objekt $O$
@@ -2951,7 +2956,7 @@ offen sein.
 \end{folg}
 
 Produkte von topologischen Gruppen sind topologische Gruppen. Für eine
-Indexmenge $I$ und $G_{i}$ topologische Gruppe für $\in I$ hat man
+Indexmenge $I$ und eine topologische Gruppe $G_{i}$ mit dem Element $i\in I$ hat man
 $G=\prod_{i\in I} G_{i}, g=(g_{i}), h=(h_{i}), gh=(g_{i}h_{i})$. Die
 Gruppenoperationen sind stetig bezüglich der Produkttopologie.
 
@@ -4545,9 +4550,12 @@ Wir haben
      \langle f,\Phi_{j+1,k}\rangle
 \end{align*}
 Beide Formeln sind umgeschriebene
-Skalierungsgleichungen. Es gilt $\Phi(x-n)= 2\sum_{k\in\Z} a_{k}
-\Phi(2x-(2n+k))= 2\sum_{k\in\Z} a_{k-2n} \Phi(2x-k)$. Letzteres erhält man
-durch Indexverschiebung. Weiter will man ein $j$ dazu haben: $\Phi(2^{j}x-n)=
+Skalierungsgleichungen. Es gilt (nach Anwendung einer Indexverschiebung):
+\begin{gather*}
+  \Phi(x-n)= 2\sum_{k\in\Z} a_{k}\Phi(2x-(2n+k))= 2\sum_{k\in\Z} a_{k-2n}
+     \Phi(2x-k)
+\end{gather*}
+Weiter will man ein $j$ dazu haben: $\Phi(2^{j}x-n)=
 2\sum_{k\in\Z} a_{k-2n} \Phi(2^{j+1} x-k)$ und es ergibt sich:
 $2^{\nicefrac{j}{2}} \Phi(2^{j}x-n)= \sqrt{2} \sum_{k\in\Z} a_{k-2n}
 2^{\nicefrac{j+1}{2}} \Phi(2^{j+1}x-k)$. Daraus folgt, $\Phi_{jn}(x)= \sqrt{2}
@@ -5147,10 +5155,11 @@ gibt, mit $\abs{f_{n}}\leq1$ und $\abs{S_{N}(f_{N})(0)}\geq c'\log N$.
   erfüllt.\\
   Um die Aussage zu zeigen, müssen wir betrachten:
   \begin{align*}
-    \abs{\frac{1}{N} \sum_{n=1}^{N} f(\xi_{n})- \int_{0}^{1}f} &\leq
-       \abs{\frac{1}{N} \sum_{n=1}^{N} (f(\xi_{n})- P(\xi_{n}))}+
-       \abs{\frac{1}{N} \sum_{n=1}^{N} P(\xi_{n})- \int_{0}^{1}P}+
-       \abs{\int_{0}^{1} P-\int_{0}^{1} f}\\
+    \abs[\bigg]{\frac{1}{N} \sum_{n=1}^{N} f(\xi_{n})- \int_{0}^{1}f} &\leq
+       \abs[\bigg]{\frac{1}{N} \sum_{n=1}^{N} (f(\xi_{n})- P(\xi_{n}))}+
+       \abs[\bigg]{\frac{1}{N} \sum_{n=1}^{N} P(\xi_{n})- \int_{0}^{1}P}\\
+    &\qquad+
+       \abs[\bigg]{\int_{0}^{1} P-\int_{0}^{1} f}\\
     &\leq\epsilon+\epsilon+\epsilon\leq3\epsilon\text{ für } N\geq N_{0}
   \end{align*}
   Diese Aussage haben wir bereits in der Vorlesung gesehen. Die Funktion lässt
@@ -5176,13 +5185,19 @@ gibt, mit $\abs{f_{n}}\leq1$ und $\abs{S_{N}(f_{N})(0)}\geq c'\log N$.
   Wir müssen zeigen, dass $\frac{1}{N} \sum_{n=1}^{N} e^{2\pi
   iakn^{\sigma}}\xrightarrow{N\rightarrow\infty} 0$. Dazu gehört das Integral
   $\frac{1}{N} \int_{1}^{N+1} e^{2\pi i(ak)x^{\sigma}}\,dx$. Die Differenz aus
-  Summe und Integral ist kleiner als $\frac{1}{N} \sum_{n=1}^{N}
-  \int_{n}^{n+1} \abs{e^{2\pi akn^{\sigma}} - e^{2\pi iakx^{\sigma}}}\,dx= \frac{1}{N} \sum_{n=1}^{N}
-  \int_{n}^{n+1} \abs{1 - e^{2\pi iak(x^{\sigma}-n^{\sigma})}}\,dx\leq\frac{1}{N} \sum_{n=1}^{N}
-  \int_{n}^{n+1} 2\pi \abs{ak}(x^{\sigma}-n^{\sigma})\,dx\leq \frac{1}{N} \sum_{n=1}^{N}
-  \int_{n}^{n+1} 2\pi\abs{ak}((n+1)^{\sigma}-n^{\sigma})\,dx= \frac{C}{N}
-  \sum_{n=1}^{N} ((n+1)^{\sigma}-n^{\sigma})= \frac{C}{N} \sum_{n=1}^{N}
-  \sigma\Theta^{\sigma-1}$ für ein $\Theta\in[n,n+1]$. Insgesamt ist es also
+  Summe und Integral ist kleiner als
+  \begin{align*}
+    \frac{1}{N} \sum_{n=1}^{N} \int_{n}^{n+1} \abs{e^{2\pi akn^{\sigma}} -
+       e^{2\pi iakx^{\sigma}}}\,dx &= \frac{1}{N} \sum_{n=1}^{N}
+       \int_{n}^{n+1} \abs{1 - e^{2\pi iak(x^{\sigma}-n^{\sigma})}}\,dx\\
+    &\leq\frac{1}{N} \sum_{n=1}^{N} \int_{n}^{n+1} 2\pi
+       \abs{ak}(x^{\sigma}-n^{\sigma})\,dx\\
+    &\leq \frac{1}{N} \sum_{n=1}^{N}  \int_{n}^{n+1}
+       2\pi\abs{ak}((n+1)^{\sigma}-n^{\sigma})\,dx\\
+    &= \frac{C}{N} \sum_{n=1}^{N} ((n+1)^{\sigma}-n^{\sigma})= \frac{C}{N}
+       \sum_{n=1}^{N} \sigma\Theta^{\sigma-1}
+  \end{align*}
+   für ein $\Theta\in[n,n+1]$. Insgesamt ist es also
   kleinergleich als $\frac{C'}{N} \sum_{n=1}^{N} n^{\sigma-1}\leq\frac{C''}{N}
   N^{\sigma}= N''N^{\sigma-1}$. Da $0<\sigma<1$ geht der Ausdruck für
   $N\rightarrow\infty$ gegen $0$.
@@ -5205,19 +5220,24 @@ gibt, mit $\abs{f_{n}}\leq1$ und $\abs{S_{N}(f_{N})(0)}\geq c'\log N$.
   $a$ gleichverteilt in $[0,1)$ ist. Hinweis: Vergleichen Sie dazu die Summe
   aus dem Weylschen Kriterium mit einem geeigneten Integral.\\
   Es ist $\frac{1}{N} \sum_{n=1}^{N} e^{2\pi ika\log n}\rightarrow0$. Zunächst
-  vergleichen wir wieder $\frac{1}{N} \abs{\sum_{n=1}^{N} e^{2\pi ika\log n}-
-  \int_{1}^{N} e^{2\pi ika\log x}\,dx}\leq\frac{C}{N} \sum_{n=1}^{N}
-  \abs{\log(n+1)-\log n}\leq\frac{C}{N}\sum_{n=1}^{N}\frac{1}{n}= C \frac{\log
-  N}{N}\rightarrow0$.
-
-  Wir betrachten nun den Realteil des Integrals: $\frac{1}{N} \int_{1}^{N}
+  vergleichen wir wieder
+  \begin{align*}
+    \frac{1}{N} \abs{\sum_{n=1}^{N} e^{2\pi ika\log n}- \int_{1}^{N} e^{2\pi
+       ika\log x}\,dx} &\leq\frac{C}{N} \sum_{n=1}^{N} \abs{\log(n+1)-\log n}\\
+    &\leq\frac{C}{N}\sum_{n=1}^{N}\frac{1}{n}= C \frac{\log N}{N}\rightarrow0
+  \end{align*}
+  
+  Wir betrachten nun den Realteil des Integrals:
+  \begin{gather*}
+    \frac{1}{N} \int_{1}^{N}
   \cos(2\pi ka\log x)\,dx=\frac{1}{N} \int_{1}^{N} \cos(b\log x)\,dx\sim
-  \sin(\log N)\nrightarrow0$.
+  \sin(\log N)\nrightarrow0
+  \end{gather*}
 \end{enumerate}
 
 \section{Zur Fouriertransformation}
 
-Berechnen Sie die Fouriertransformation der Funktionen
+Berechnen Sie die Fouriertransformation der reellen Funktionen
 $f,g\colon\R\rightarrow\R$ gegeben durch:
 \begin{align*}
   f(x) &=
