--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -125,15 +125,6 @@
 \newcommand*{\FB}{\mathfrak{B}}
 \newcommand*{\CO}{\mathcal{O}}
 
-% Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
-% einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
-% macht es leichter sie alle zu finden und auch ganz einfach
-% auszublenden, indem man den Befehl einfach leer definiert
-\newcommand*{\help}[1]{\textcolor{green}{help: #1}}
-
-% \todo ist das gleiche wie \help nur für offene Aufgaben
-%\newcommand*{\todo}[1]{\textcolor{red}{todo: #1}}
-
 % Um wichtige Begriffe im Text überall gleich vorzuheben (gleiches
 % Markup), sollte dieser Befehl verwendet werden. Das Argument wird
 % automatisch als Indexeintrag verwendet. Dieser kann aber auch als
@@ -144,20 +135,6 @@
 
 % Befehl für die Darstellung der Gliederungsüberschriften im Index
 \newcommand*{\lettergroup}[1]{\minisec{#1}}
-
-% Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
-%\newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
-
-% Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
-% im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
-% Veränderung aller Stellen, falls der Prof. doch nicht mehr gdw nimmt,
-% sondern \Leftrightarrow.
-% \newcommand*{\gdw}{\ifthenelse{\boolean{mmode}}%
-% 			       {\mspace{8mu}gdw\mspace{8mu}}%
-% 			       {$gdw$\xspace}}
-% \newcommand*{\gdwdef}{\ifthenelse{\boolean{mmode}}%
-% 			       {\mspace{8mu}gdw_{def}\mspace{8mu}}%
-% 			       {$gdw_{def}$\xspace}}
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
@@ -3642,8 +3619,8 @@ $\Gamma=\hat{G}$ die duale Gruppe.
 
 \section{Die Fouriertransformation auf $L_{2}(G)$--Pontrjagin"=Dualität}
 
-Im Allgemeinen ist $L_{2}(G)\nsubseteq L_{1}(G)$ \help{Muss das nicht eher
-subsetneq heißen?}, aber $L_{2}(G)\cap L_{1}(G)\subseteq L_{2}(G)$ dicht. Ist
+Im Allgemeinen ist $L_{2}(G)\subsetneq L_{1}(G)$, aber $L_{2}(G)\cap L_{1}(G)
+\subseteq L_{2}(G)$ dicht. Ist
 die Fouriertransformation also (auf einem dichten Teilraum von) $L_{2}(G)$
 beschränkt, so kann man sie auf $L_{2}(G)$ fortsetzen. Den Weg dazu wollen wir
 in diesem Abschnitt ohne Beweise skizzieren.
