Ein sigma fehlte
git-svn-id: https://svn.lug-jena.de/uni-skripte@2234 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -2386,7 +2386,7 @@ Mittel} ist dann
   M_{t}(f)(x)\coloneq\frac{1}{4\pi} \int_{\SSS^{2}} f(x-\gamma t)\,d\sigma(\gamma) 
 \end{gather*}
 Dabei ist $\SSS^{2}\coloneq\{y\in\R^{3}\colon\abs{y}\leq1\}$ die
-Einheitssphäre im $\R^{3}$ und $d\gamma$ das
+Einheitssphäre im $\R^{3}$ und $d\sigma(\gamma)$ das
 Oberflächenelement auf $\SSS$.
 
 \begin{bemerk}
