--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -424,7 +424,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{bsp}
   \begin{enumerate}[(i)]
    \item Die Addition, Subtraktion und Multiplikation auf den natürlichen,
-    rellen und komplexen Zahlen.
+    reellen und komplexen Zahlen.
    \item Der Durchschnitt oder die Vereinigung auf der Potenzmenge $\FP(X)$.
    \item Der größte gemeinsame Teiler oder das kleinste gemeinsame Vielfache
     auf $\N$.
