Umlaute in listings entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2238 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -5188,21 +5188,21 @@ Beantworten Sie die folgenden Fragen mit GAP:
      G:=SymmetricGroup(9);
      sum:=Size(Filtered(G,x->Order(x)=4))/2; #zyklische Untergruppen der Ordnung 4
      F:=Filtered(G,x->Order(x)=2);
-     C:=0; #initialisieren, nicht unbedingt nötig
+     C:=0; #initialisieren, nicht unbedingt noetig
      H:=0; #initialisieren
      for x in F do
      C:=Intersection(Centralizer(G,x),F);
      H:=Filtered(C,y->x*y in C); 
-     sum:=sum+Size(H)/2; #noch nicht gezählte Kleinsche Vierergruppen die x enthalten
+     sum:=sum+Size(H)/2; #noch nicht gezaehlte Kleinsche Vierergruppen die x enthalten
      F:=Difference(F,[x]);
      od;
-     Print(sum,"\n"); #Lösung: 56007
+     Print(sum,"\n"); #Loesung: 56007
    \end{lstlisting}
  \item Wie viele Untergruppen hat $\Z/12\Z\times\Z/15\Z$?
    \begin{lstlisting}
-     LoadPackage("sonata"); #für den Befehl "Subgroups"
+     LoadPackage("sonata"); #fuer den Befehl "Subgroups"
      G:=DirectProduct(CyclicGroup(12),CyclicGroup(15));
-     Print(Size(Subgroups(G)),"\n"); #Lösung: 36
+     Print(Size(Subgroups(G)),"\n"); #Loesung: 36
    \end{lstlisting}
  \item Gegeben seien die folgenden Permutationen von $\Omega\coloneq
   \{0,1,\dotsc,9,10\}\cup\{\infty\}$:
@@ -5217,7 +5217,7 @@ Beantworten Sie die folgenden Fragen mit GAP:
     alpha:=(11,1,2,3,4,5,6,7,8,9,10); #ersetze 0 durch 11 und unendlich durch 12
     beta:=(1,2,4,8,5,10,9,7,3,6);
     gamma:=(1,10)(2,5)(3,7)(4,8)(6,9)(11,12);
-    Print(Size(Group([alpha,beta,gamma])),"\n"); #Lösung: 1320
+    Print(Size(Group([alpha,beta,gamma])),"\n"); #Loesung: 1320
   \end{lstlisting}
 \end{enumerate}
 
@@ -5399,7 +5399,7 @@ nach \textsc{Lagrange} (\autoref{satz:32-lagrange}).
   \begin{lstlisting}
     LoadPackage("`sonata"');
     for i in [1..12] do
-    Print(Filtered(AllSmallGroups(i),G$\rightarrow$not
+    Print(Filtered(AllSmallGroups(i),G->not
     IsFullinvariant(G,Center(G))),"`\n"');
     od;    
   \end{lstlisting}
@@ -5410,7 +5410,7 @@ nach \textsc{Lagrange} (\autoref{satz:32-lagrange}).
     G:=SymmetricGroup(6);
     Print(Filtered(Subgroups(G),H->Size(GeneratorsOfGroup(H))>2 and
     IsSolvable(H) and Size(MinimalGeneratingSet(H))>2),"`\n"');
-    #MinimalGeneratingSet ist bisher nur für auflÃ¶sbare Gruppen implementiert
+    #MinimalGeneratingSet ist bisher nur fuer aufloesbare Gruppen implementiert
   \end{lstlisting}
 \end{enumerate}
 Bei dieser Aufgabe können Sie wieder GAP verwenden.
