--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -2184,7 +2184,28 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
       f &= i-1 +(3+2i)(z-i)+4 \sum_{n=2}^{\infty} \frac{(-1)^{n}}{(1+i)^{n+1}}
 	 (z-i)^{n}
     \end{align*}
-   \item $f(z)= \frac{z^{2}}{(z+i)(z-i)^{2}}, z_{0}=0$
+   \item $f(z)= \frac{z^{2}}{(z+i)(z-i)^{2}}, z_{0}=0$\\
+     \begin{align*}
+       f(z) &= \frac{z^2}{(z+i)(z-i)^{2}}= -\frac{1}{4} \frac{1}{-i-z}
+       - \frac{3}{4} \frac{1}{i-z}- \frac{i}{2} \frac{1}{(z-i)^2}\\
+       \frac{1}{-i-z} &= \sum_{n=0}^\infty \frac{z^n}{(-i)^{n+1}}\\
+       \frac{1}{i-z} &=  \sum_{n=0}^\infty \frac{z^n}{i^{n+1}}\\
+       -\frac{1}{(z-i)^2} &= \left(\frac{1}{z-i}\right)'=
+       \left(
+         -\sum_{n=0}^\infty \frac{z^n}{i^{n+1}}
+       \right)'= -\sum_{n=1}^\infty \frac{n}{i^{n+1}} z^n\\
+       f(z) &= \sum_{n=1}^\infty
+       \left(
+         \frac{-1}{4} \frac{1}{i^{n+1}}+ \frac{3}{4}
+         \frac{1}{(-i)^{n+1}} - \frac{i}{2} \frac{n}{i^{n+1}}
+       \right) z^n +
+       \left(
+         \frac{1}{i}+ \frac{1}{-i}
+       \right)\\
+       &= \sum_{n=1}^\infty \frac{(-i)^{n+1}+ i^{n+1}- (-i)^{n+1}n}{1}
+       z^n = \sum_{n=1}^\infty i^{n+1}((-1)^{n+1}+ 1+(-n)^n) z^n
+     \end{align*}
+     Die Lösung geht noch weiter. \todo{Weitermachen}
   \end{enumerate}
 
  \item Man bestimme den Konvergenzradius
