--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -2280,10 +2280,28 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
    \item $f(z)= \sin^{2}z$
    \item $f(z)= \cos(z^{2}-1)$
   \end{enumerate}
+% Aufgabe 39
  \item Man bestimme die Art der Singularitäten:
   \begin{enumerate}[a)]
-   \item $\frac{1-\cos z}{z^{2}}$
-   \item $e^{\nicefrac{1}{z}} +\nicefrac{1}{z}$
+   \item $\frac{1-\cos z}{z^{2}}$\\
+     Die Funktion hat in $z_0=0$ eine hebbare Singularität:
+     \begin{align*}
+       1-\cos z &= 1-\sum_{n=0}^\infty \frac{(-1)^n}{(2n)!} z^{2n}=
+       \sum_{n=1}^\infty \frac{(-1)^{n+1}}{(2n)!} z^{2n}\\
+       \frac{1-\cos z}{z²} &= \sum_{n=1}^\infty
+       \frac{(-1)^{n+1}}{(2n)!} z^{2n-2}
+     \end{align*}
+   \item $e^{\nicefrac{1}{z}} +\nicefrac{1}{z}$\\
+     Die Funktion besitzt in $z_0=0$ eine wesentliche Singularität,
+     denn
+     \begin{align*}
+       e^{\nicefrac{1}{z}} +\nicefrac{1}{z} &= \sum_{n=0}^\infty
+       \frac{1}{n!}
+       \left(
+         \frac{1}{z}
+       \right)^n+ \frac{1}{z}
+     \end{align*}
+     Für jedes $m\in\Z$ gibt es ein $k\in\Z$ mit $k\leq m$ und $a_k\neq0$.
   \end{enumerate}
  \item Man bestimme den Konvergenzradius von:
   \begin{enumerate}[a)]
