--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -2264,11 +2264,26 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
      \end{align*}
      Die Lösung geht noch weiter. \todo{Weitermachen}
   \end{enumerate}
-
+% Aufgabe 36
  \item Man bestimme den Konvergenzradius
   \begin{gather*}
     \sum_{k=0}^{\infty} (n^{2}+b^{n})z^{n}\qquad b\in\C
   \end{gather*}
+  \begin{enumerate}[1.\,F{a}ll]
+  \item Für $b=0$ ist $a_n=n²$ und $R= \lim_{n\rightarrow\infty}
+    \abs{\frac{a_n}{a_{n+1}}}= \lim_{n\rightarrow\infty}
+    \abs{\frac{n²}{n²+2n+1}=1$.
+    \item Für $\abs{b}\in(0,1)$ strebt $b^n$ gegen $0$ und es gilt,
+      $R= \lim_{n\rightarrow\infty} \abs{\frac{a_n}{a_{n+1}}}=
+      \lim_{n\rightarrow\infty} \abs{\frac{n²+b^n}{n²+2n+1b\cdot
+          b^n}}= \lim_{n\rightarrow\infty} \abs{\frac{1+
+          \frac{b^n}{n²}}{1+ \frac{2}{n}+ \frac{1}{n²} +\frac{b^n
+            b}{n²}}}=1$.
+    \item Für $\abs{b}=1$ strebt $\abs{b}^n$ gegen $1$, d.\,h. $b^n$
+      ist beschränkt. Damit ist auch $R=1$.
+    \item Für $\abs{b}>$ strebt $b^n$ gegen $\infty$ und es ist $R=\frac{1}{\abs{b}}$.
+  \end{enumerate}
+% Aufgabe 37
  \item Die Summe $\sum a_{k}z^{k}$ habe den Konvergenzradius $\rho$. Welchen
   Konvergenzradius hat
   \begin{enumerate}
@@ -2423,6 +2438,7 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
   \end{align*}
  \item Man bestimme die Art der Singularität, Residuen und Hauptteil von
   $f(z)= (z+2)\sin\frac{1}{z+2}$.
+% Aufgabe 50
  \item Man zeige:
   \begin{enumerate}[a)]
    \item $\int_{-\infty}^{\infty} \frac{x^{2}+1}{x^{4}+1}\,dx= \pi\sqrt{2}$
