--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -2331,9 +2331,11 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
      \end{align*}
      Für jedes $m\in\Z$ gibt es ein $k\in\Z$ mit $k\leq m$ und $a_k\neq0$.
   \end{enumerate}
+% Aufgabe 40
  \item Man bestimme den Konvergenzradius von:
   \begin{enumerate}[a)]
-   \item $\sum_{n=0}^{\infty} \frac{(n!)^{2}}{(2n)!} z^{n}$
+   \item $\sum_{n=0}^{\infty} \frac{(n!)^{2}}{(2n)!} z^{n}$\\
+     Nach dem Quotientenkriterium ist $\rho=4$.
    \item $\sum_{n=0}^{\infty} (\cos n)z^{n}$
   \end{enumerate}
  \item Es habe $\sum a_{k} z^{k}$ den Konvergenzradius $\rho$. Welchen
@@ -2396,6 +2398,7 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
       &= \sum_{n=-\infty}^{-1}(3^{-n-1}-2^{-n-1}) z^n
     \end{align*}
   \end{enumerate}
+%Aufgabe 43
  \item Man bestimme die singulären Punkte und die Art der Singularitäten von
   \begin{enumerate}[a)]
    \item $\frac{z}{z^{2}+1}$\\
