--- a/green-algebra2/skript.ltx
+++ b/green-algebra2/skript.ltx
@@ -129,6 +129,8 @@
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
+\newcommand*{\GL}{\mathrm{GL}}    % ??
+\newcommand*{\CG}{\mathrm{CG}}    % ??
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
