--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -3,8 +3,8 @@
 % rubber: clean $base.thm
 %  rubber soll nach Änderungen an der Datei nochmal bauen
 % rubber: watch $base.thm
-% rubber: makeidx.tool      xindy
-% rubber: makeidx.language  german-din
+% rubber: index.tool      xindy
+% rubber: index.language  german-din
 
 \RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
@@ -13,7 +13,7 @@
 \documentclass[halfparskip*,ngerman,draft,twoside]{scrreprt}
 
 \usepackage{babel}
-\usepackage{makeidx}
+\usepackage{index}
 \usepackage{xcolor}
 \usepackage[draft=false,colorlinks,bookmarksnumbered,linkcolor=blue,breaklinks]{hyperref}
 
