Verbesserungen im Text
git-svn-id: https://svn.lug-jena.de/uni-skripte@2276 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -249,7 +249,7 @@
 \begin{defini}
   Sei $\Omega \subseteq \C$ ein Gebiet, d.\,h. $\Omega$ ist offen und
   zusammenh‰ngend). Dann heiﬂt $f\colon\Omega \rightarrow \C, z \mapsto f(z)$
-  heiﬂt \highl[Funktion!komplexe]{komplexe Funktion} und hat eine Darstellung
+  \highl[Funktion!komplexe]{komplexe Funktion} und hat eine Darstellung
   durch zwei reelle Funktionen in zwei reellen Variablen: $f\colon\Omega
   \rightarrow \C, x+iy \mapsto u(x,y) + iv(x,y)$ mit $u,v\in\R$.
 \end{defini}
@@ -303,16 +303,16 @@ Der Raum $(\C, \abs{\cdot}, +)$ ist ein normierter Raum mit der Betragsfunktion
 \end{gather*}
   Denn:
   \begin{align*}
-    \abs{\frac{e^z - 1}{z} - 1} &= \abs{\frac{e^z - 1 - z}{z}}=
-       \abs{\sum^{\infty}_{k=2} \frac{z^{k-1}}{k!}} \leq \sum^{\infty}_{k=2}
-       \abs{\frac{z^{k-1}}{k!}}\\
+    \abs[\bigg]{\frac{e^z - 1}{z} - 1} &= \abs[\bigg]{\frac{e^z - 1 - z}{z}}=
+       \abs[\bigg]{\sum^{\infty}_{k=2} \frac{z^{k-1}}{k!}} \leq \sum^{\infty}_{k=2}
+       \abs[\bigg]{\frac{z^{k-1}}{k!}}\\
     &\leq \sum^{\infty}_{k=2} \abs{z^{k-1}} =
        \sum^{\infty}_{k=1} \abs{z}^k = \frac{\abs{z}}{1 - \abs{z}}
 \end{align*}
 Wir haben hier die geometrische Reihe angewendet, da $\abs{z} \in \R$ und
   $\abs{z} < 1$, falls $z$ nahe genug bei Null ist. Damit folgt:
 \begin{gather*}
-	0 \leq \lim_{z \rightarrow 0} \abs{\frac{e^z - 1}{z} - 1} \leq
+	0 \leq \lim_{z \rightarrow 0} \abs[\bigg]{\frac{e^z - 1}{z} - 1} \leq
 	\lim_{z \rightarrow 0} \frac{\abs{z}}{1 - \abs{z}} = 0
 \end{gather*}
 \end{bsp}
@@ -355,7 +355,7 @@ Wir haben hier die geometrische Reihe angewendet, da $\abs{z} \in \R$ und
 
 \begin{bemerk}
   ƒquivalent zur obigen Definition ist: $f$ in $a$ stetig, genau dann, wenn
-  $\forall \epsilon > 0 \exists \delta > 0\colon\abs{f(z)-f(a)} < \epsilon$
+  $\forall \epsilon > 0\,\exists \delta > 0\colon\abs{f(z)-f(a)} < \epsilon$
   f¸r alle $\abs{z-a} < \delta$.
 \end{bemerk}
 
