Verweise zu Definitionen und Sätzen für Lösung der Prüfungsklausur
git-svn-id: https://svn.lug-jena.de/uni-skripte@2279 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -963,7 +963,7 @@ Dann gilt,
   \end{proof}
 \end{satz}
 
-\begin{defini}
+\begin{defini}\label{def:analyt-funkt}
   Eine Funktion $f\colon \Omega \rightarrow \C$ heißt auf dem Gebiet $\Omega$
   genau dann \highl[Funktion!analytische]{analytisch}, wenn für alle $z_0 \in
   \Omega$ ein $r > 0$ existiert, sodass $f$ auf $K_r(z_0)$ in eine Potenzreihe
@@ -1140,7 +1140,7 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
 \chapter{\textsc{Cauchy}sche Integralformel}
 
 %satz1
-\begin{satz}[\textsc{Cauchy}sche Integralformel für Kreise]
+\begin{satz}[\textsc{Cauchy}sche Integralformel für Kreise]\label{satz:cauchy-integr-fuer-kreise}
   Sei $f$ holomorph in $\Omega,
   \overline{K_{r}(z_{0})}\subset\Omega\Rightarrow f(z)= \frac{1}{2\pi i}
   \int_{C_{r}(z_{0})} \frac{f(w)}{w-z}\,dw$ für alle $z\in K_{r}(z_{0})$.
@@ -2605,10 +2605,12 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
 
 \begin{enumerate}
 \item Definieren Sie die Begriffe analytische Funktion, isolierte und
-  hebbare Singularität sowie Polstelle.
+  hebbare Singularität sowie Polstelle.\\
+  Siehe \autoref{def:analyt-funkt} und \autoref{def:61}
 \item Formulieren Sie die Sätze: Cauchysche Integralformel für Kreise
   und Potenzreihenentwicklung holomorpher Funktionen (Konvergenzradius
-  und Cauchyformel).
+  und Cauchyformel).\\
+  siehe \autoref{satz:cauchy-integr-fuer-kreise} und \autoref{satz:43}
 \item Seien $z_{1}=1, z_{2}= 2+i$ die Ecken eines gleichseitigen
   Dreiecks. Man suche die dritte Ecke $z_{3}= a+ib$ (im mathematisch
   positiven Sinn).
