--- a/weber-funktionentheorie/skript.ltx
+++ b/weber-funktionentheorie/skript.ltx
@@ -2634,6 +2634,7 @@ Dies ergibt sich aus Folgerung 3 in 16.2 \todo{Link einfügen}
 \begin{thebibliography}{99}
 
 \bibitem{walter} Wolfgang Walter. Analysis II.
+\bibitem{freitag} Freitag. Funktionentheorie 1.
 \end{thebibliography}
 
 \clearpage
