TODO entfernt. Beweis zu Satz 8.2 (Identität von Witt) ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2283 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -2734,9 +2734,22 @@ Codierungstheorie, \textsc{Banach}räume etc.
     (y[x,y^{-1},z]y^{-1})(z[y,z^{-1},x]z^{-1})(x[z,x^{-1},y]x^{-1})=1
   \end{gather*}
   \begin{proof}
-    Wegen $y[x,y^{-1},z]y^{-1}=yx[y^{-1},z]x^{-1}[z,y^{-1}]y^{-1}=
-    yxy^{-1}zyz^{-1}x^{-1}zy^{-1}z^{-1}yy^{-1}$ gilt, dass die linke Seite der
-    Gleichung $(yxy^{-1}zyz^{-1}x^{-1}zy^{-1}z^{-1})$ \todo{vervollständigen}
+    Wegen
+    \begin{align*}
+      y[x,y^{-1},z]y^{-1} &= yx[y^{-1},z]x^{-1}[z,y^{-1}]y^{-1}=
+      yxy^{-1}zyz^{-1}x^{-1}zy^{-1}z^{-1}yy^{-1}\\
+      z[y,z^{-1},x]z^{-1} &= zy[z^{-1},x]y^{-1}[x,z^{-1}]z^{-1}=
+      zyz^{-1}xzx^{-1}y^{-1}xz^{-1}x^{-1}zz^{-1}\\
+      x[z,x^{-1},y]x^{-1} &= xz[x^{-1},y]z^{-1}[y,x^{-1}]x^{-1}=
+      xzx^{-1}yxy^{-1}z^{-1}yx^{-1}y^{-1}xx^{-1}\\
+    \end{align*}
+    gilt, dass sich die linke Seite der Gleichung durch folgendes
+    zusammensetzt:
+    \begin{align*}
+      (yxy^{-1}zyz^{-1}x^{-1}zy^{-1}z^{-1})\cdot(zyz^{-1}xzx^{-1}y^{-1}xz^{-1}x^{-1})
+      \cdot(xzx^{-1}yxy^{-1}z^{-1}yx^{-1}y^{-1})
+    \end{align*}
+    Wie man leicht nachprüft, entspricht das Produkt dem gewünschten Ergebnis.
   \end{proof}
 \end{satz}
 
