--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -846,7 +846,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}
-     \item Sei $U\leq G$. Wegen $U\neq\emptyset$ ist auch $f(U)\neq\emptyset$.
+     \item Sei $U\leq G$. Da $U\neq\emptyset$, ist auch $f(U)\neq\emptyset$.
       Ferner ist $f(U)f(U)^{-1}= f(U)f(U^{-1})= f(UU^{-1})\subseteq f(U)$.
      \item Sei $V\leq H$. Weil $f(1_{G})= 1_{H}\in V$ ist $1_{G}\in
       f^{-1}(V)$, d.\,h. $f^{-1}(V)\neq\emptyset$. Seien $a,b\in f^{-1}(V)$,
@@ -1278,7 +1278,12 @@ Codierungstheorie, \textsc{Banach}räume etc.
     kennenlernen (Siehe \autoref{cha:4-Normalreihen}). Eine
     nichteinfache Gruppe $G\neq1$ stellt man sich aus Normalteiler $N$ und
     Faktorgruppe $G/N$ zusammengesetzt vor:
-    \missingfigure{Bauklötze $G/N$ über $N$}
+    \begin{tikzpicture}[rounded corners=3pt]
+      \draw (0,0) rectangle (3,3);
+      \draw (0,1.5) -- (3,1.5);
+      \draw  (1.5,2.2) node{$G/N$};
+      \draw (1.5,.75) node{$N$};
+    \end{tikzpicture}
     Auf diese Weise werden einfache Gruppen zu Bausteinen für beliebige
     Gruppen. Die Bestimmung aller endlichen einfachen Gruppen war eines der
     größten Projekte der Mathematik überhaupt. Beteiligt daran waren ca.\,50
